--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <div class="card h-100 text-center">
           <div class="card-body">
             <i class="fas fa-rocket fa-3x text-primary mb-3 animate__animated animate__bounce"></i>
-            <h5 class="card-title">Example 1</h5>
-            <p class="card-text">A simple Bootstrap 5 example with animations.</p>
-            <a href="https://rephel.github.io/example1" class="btn btn-primary" target="_blank">View Example</a>
+            <h5 class="card-title">Carousel Example</h5>
+            <p class="card-text">A Bootstrap 5 example with Carousel</p>
+            <a href="https://rephel-0101.github.io/carousel.html" class="btn btn-primary" target="_blank">View Example</a>
           </div>
         </div>
       </div>
