--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2023 Rephel. All rights reserved.</p>
+    <p>Made with 
+    <i class="fa-solid fa-heart fa-flip" style="color: #ff0026;"></i> Rephel. &copy; 2025. All rights reserved.</p>
   </footer>
 
   <!-- Back to Top Button -->
