--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <i class="fas fa-rocket fa-3x text-primary mb-3 animate__animated animate__bounce"></i>
             <h5 class="card-title">Carousel Example</h5>
             <p class="card-text">A Bootstrap 5 example with Carousel</p>
-            <a href="https://rephel-0101.github.io/carousel.html" class="btn btn-primary" target="_blank">View Example</a>
+            <a href="carousel.html" class="btn btn-primary" target="_blank">View Example</a>
           </div>
         </div>
       </div>
