--- a/carousel.html
+++ b/carousel.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+<a class="btn btn-success" href="https://notes.strangerephel.com/mastering-the-bootstrap-5-carousel-a-step-by-step-guide-to-creating-responsive-image-sliders/#comment-8">Return to Notes</a>
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <!-- Indicators -->
     <div class="carousel-indicators">
