--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <div class="card h-100 text-center">
           <div class="card-body">
             <i class="fas fa-cogs fa-3x text-success mb-3 animate__animated animate__rotateIn"></i>
-            <h5 class="card-title">Example 2</h5>
-            <p class="card-text">Advanced Bootstrap 5 components in action.</p>
-            <a href="https://rephel.github.io/example2" class="btn btn-success" target="_blank">View Example</a>
+            <h5 class="card-title">Portfolio Sample</h5>
+            <p class="card-text">portfolio for Demonstration</p>
+            <a href="https://rephel.github.io/portfolio2.html" class="btn btn-success" target="_blank">View Example</a>
           </div>
         </div>
       </div>
@@ -94,9 +94,9 @@
         <div class="card h-100 text-center">
           <div class="card-body">
             <i class="fas fa-chart-line fa-3x text-warning mb-3 animate__animated animate__pulse"></i>
-            <h5 class="card-title">Example 3</h5>
-            <p class="card-text">Data visualization with Bootstrap 5.</p>
-            <a href="https://rephel.github.io/example3" class="btn btn-warning" target="_blank">View Example</a>
+            <h5 class="card-title">Completed Portfolio</h5>
+            <p class="card-text">Customized POrtfolio with Bootstrap 5.</p>
+            <a href="https://rephel.github.io/portfolio.html" class="btn btn-warning" target="_blank">View Example</a>
           </div>
         </div>
       </div>
