--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@
                         <div class="col-md-4 text-center mb-4">
                             <i class="bi bi-envelope-fill fs-1 mb-3"></i>
                             <h5 class="fw-bold">Email</h5>
-                            <p>rephel.pallavaram@csc.com</p>
+                            <a href="mailto:cscpallavaram@gmail.com">rephel.pallavaram@csc.com</a>
                         </div>
                         <div class="col-md-4 text-center mb-4">
                             <i class="bi bi-telephone-fill fs-1 mb-3"></i>
