--- a/portfolio.html
+++ b/portfolio.html
@@ -133,8 +133,8 @@
                     <div class="card h-100 shadow-sm border-0">
                         <div class="card-body text-center p-4">
                             <i class="bi bi-palette text-warning mb-3" style="font-size: 3rem;"></i>
-                            <h4 class="card-title text-warning fw-bold">UI/UX Design</h4>
-                            <p class="card-text fs-6">Figma, Adobe XD, User Research, Wireframing, Prototyping</p>
+                            <h4 class="card-title text-warning fw-bold">Data Analytics</h4>
+                            <p class="card-text fs-6">Numpy, Pandas, MatPlotLib, SciKit-Learn, tensorFlow, Keras...</p>
                         </div>
                     </div>
                 </div>
@@ -233,11 +233,14 @@
                             <i class="bi bi-telephone-fill fs-1 mb-3"></i>
                             <h5 class="fw-bold">Phone</h5>
                             <p>+91 9710 434343</p>
+                            <a href="tel:+919710434343">+91 9710 434343</a>
                         </div>
                         <div class="col-md-4 text-center mb-4">
                             <i class="bi bi-geo-alt-fill fs-1 mb-3"></i>
                             <h5 class="fw-bold">Location</h5>
                             <p>Pallavaram, Chennai</p>
+                            <a href="https://maps.app.goo.gl/8tkqXt6V1yoLUCWe9">Pallavaram, Chennai</a>
+                            
                         </div>
                     </div>
                     <div class="card bg-white text-dark mt-4">
