--- a/portfolio.html
+++ b/portfolio.html
@@ -227,20 +227,23 @@
                         <div class="col-md-4 text-center mb-4">
                             <i class="bi bi-envelope-fill fs-1 mb-3"></i>
                             <h5 class="fw-bold">Email</h5>
-                            <a class="text-white" href="mailto:cscpallavaram@gmail.com">rephel.pallavaram@csc.com</a>
+                            <a class="text-white text-decoration-none"" href="
+                                mailto:cscpallavaram@gmail.com">rephel.pallavaram@csc.com</a>
                         </div>
                         <div class="col-md-4 text-center mb-4">
                             <i class="bi bi-telephone-fill fs-1 mb-3"></i>
                             <h5 class="fw-bold">Phone</h5>
-                            <p>+91 9710 434343</p>
-                            <a class="text-white" href="tel:+919710434343">+91 9710 434343</a>
+                            <!-- <p>+91 9710 434343</p> -->
+                            <a class="text-white text-decoration-none"" href=" tel:+919710434343">+91 9710 434343</a>
                         </div>
                         <div class="col-md-4 text-center mb-4">
                             <i class="bi bi-geo-alt-fill fs-1 mb-3"></i>
                             <h5 class="fw-bold">Location</h5>
-                            <p>Pallavaram, Chennai</p>
-                            <a class="text-white" href="https://maps.app.goo.gl/8tkqXt6V1yoLUCWe9">Pallavaram, Chennai</a>
-                            
+                            <!-- <p>Pallavaram, Chennai</p> -->
+                            <a class="text-white text-decoration-none"" href="
+                                https://maps.app.goo.gl/8tkqXt6V1yoLUCWe9">Pallavaram,
+                                Chennai</a>
+
                         </div>
                     </div>
                     <div class="card bg-white text-dark mt-4">
