--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="card-body">
             <i class="fas fa-chart-line fa-3x text-warning mb-3 animate__animated animate__pulse"></i>
             <h5 class="card-title">Completed Portfolio</h5>
-            <p class="card-text">Customized POrtfolio with Bootstrap 5.</p>
+            <p class="card-text">Customized Portfolio with Bootstrap 5.</p>
             <a href="https://rephel.github.io/portfolio.html" class="btn btn-warning" target="_blank">View Example</a>
           </div>
         </div>
