--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <i class="fas fa-cogs fa-3x text-success mb-3 animate__animated animate__rotateIn"></i>
             <h5 class="card-title">Portfolio Sample</h5>
             <p class="card-text">portfolio for Demonstration</p>
-            <a href="https://rephel.github.io/portfolio2.html" class="btn btn-success" target="_blank">View Example</a>
+            <a href="portfolio2.html" class="btn btn-success" target="_blank">View Example</a>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
             <i class="fas fa-chart-line fa-3x text-warning mb-3 animate__animated animate__pulse"></i>
             <h5 class="card-title">Completed Portfolio</h5>
             <p class="card-text">Customized Portfolio with Bootstrap 5.</p>
-            <a href="https://rephel.github.io/portfolio.html" class="btn btn-warning" target="_blank">View Example</a>
+            <a href="portfolio.html" class="btn btn-warning" target="_blank">View Example</a>
           </div>
         </div>
       </div>
